# polygon-check-rs

./: Cargo.toml
data/: Limite_RS.shp  RODOVIA_NAO_PAVIMENTADA.dbf  RODOVIA_NAO_PAVIMENTADA.shp  RODOVIA_NAO_PAVIMENTADA.shx
data/dados_geo/: Link to rodovias_npav.dbf  cidades.dbf  cidades.shp  cidades.shx  estado_rs.dbf  estado_rs.shp  estado_rs.shx  rodovias_npav.dbf  rodovias_npav.shp  rodovias_npav.shx  rodovias_pav.dbf  rodovias_pav.shp  rodovias_pav.shx
data/ibge/: CIDADE.dbf  CIDADE.shp  CIDADE.shx  RODOVIA_PAVIMENTADA.dbf  RODOVIA_PAVIMENTADA.shp  RODOVIA_PAVIMENTADA.shx
src/: main copy.rsb  main.rs
