[package]
name = "cg4"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = "0.2.0"
piston = "0.50.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.64.0"
piston2d-opengl_graphics = "0.72.0"
rand = "0.7.3"
self-meter = "0.6.0"